--- a/pub/index.html
+++ b/pub/index.html
@@ -5,8 +5,10 @@
     <title>The first site</title>
 </head>
 <body>
-<h1>Hello world!</h1>
+<header><p><a href="study/">study</a></p></header>
+<h1>Hello world!!!</h1>
 <h1>I am Klim!&#128526;</h1>
+<p><a href="/">root</a></p>
 <pre>
         *
        ***
@@ -18,8 +20,9 @@
 </pre>
 <p>Entities:<hr>
 &#38;#38; or &#38;amp; - &#38;;<hr>
-&#38;#60; or &#38;lt; - &#60;.</p>
+&#38;#60; or &#38;lt; - &#60;.
 
 <!-- send me -->
+<footer><p><a href="http://psy-touch.com" target="_blank">psychology</a></p></footer>
 </body>
 </html>
