--- a/pub/study/index.html
+++ b/pub/study/index.html
@@ -10,6 +10,7 @@
     <p><a href="dataBases/">MySQL</a></p>
     <p><a href="javaScript/">JavaScript</a></p>
     <p><a href="php/">PHP</a></p>
+    <p><a href="../">Home</a></p>
 </header>
 </body>
 </html>
