--- a/pub/index.html
+++ b/pub/index.html
@@ -3,26 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>The first site</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header><p><a href="study/">study</a></p></header>
 <h1>Hello world!!!</h1>
 <h1>I am Klim!&#128526;</h1>
-<p><a href="/">root</a></p>
-<pre>
-        *
-       ***
-      *****
-     *******
-    *********
-        |
-      _____
-</pre>
-<p>Entities:<hr>
-&#38;#38; or &#38;amp; - &#38;;<hr>
-&#38;#60; or &#38;lt; - &#60;.
-
 <!-- send me -->
-<footer><p><a href="http://psy-touch.com" target="_blank">psychology</a></p></footer>
+<footer><p><a href="http://psy-touch.com" target="_blank">psy-touch.com</a></p></footer>
 </body>
 </html>
