--- a/pub/index.html
+++ b/pub/index.html
@@ -8,7 +8,7 @@
 <body>
 <header><p><a href="study/">study</a></p></header>
 <h1>Hello world!!!</h1>
-<h1>I am Klim!&#128526;</h1>
+<h1>I am Klim!<a href="answers/index.html">&#128526;</a></h1>
 <!-- send me -->
 <footer><p><a href="http://psy-touch.com" target="_blank">psy-touch.com</a></p></footer>
 </body>
